--- a/css/tailwind.css
+++ b/css/tailwind.css
@@ -1202,27 +1202,6 @@ h1,
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
-/* When the navbar is visible (on toggle) */
-
-.navbar.visible {
-  position: absolute;
-  top: -0.125rem;
-  left: 0px;
-  z-index: 40;
-  display: flex;
-  height: auto;
-  width: 100%;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  gap: 2rem;
-  --tw-bg-opacity: 1;
-  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
-  --tw-backdrop-blur: blur(8px);
-  -webkit-backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
-  backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
-}
-
 .text-gradient {
   background-image: linear-gradient(270deg,#f97316 10%,#dc2626 100%);
   -webkit-background-clip: text;
